Fixed the annoying buh that made the page overflow

--- a/about.css
+++ b/about.css
@@ -27,6 +27,7 @@ a {
 }
 .background {
     position: fixed;
+    right: 0;
     top: 0;
     margin: 0;
     padding: 0;
@@ -36,6 +37,7 @@ a {
     background-size: cover;
     background-repeat: no-repeat;
     z-index: -5;
+    display: block;
 }
 
 /*Header*/
@@ -44,9 +46,7 @@ header {
     display: flex;
     position: fixed;
     z-index: 20;
-    width: 100%;
-    max-width: 100%;
-    color: #FFFFFF;
+    width: 100%;;
 }
 #name {
     font-size: 24px;
